--- a/src/frontend/Resources/css/style.css
+++ b/src/frontend/Resources/css/style.css
@@ -35,18 +35,6 @@ div.css-ocqkz7{
     max-width: 93% !important;
 }
 
-/* .materialcard > div > div:nth-of-type(3) > iframe{
-    overflow: scroll !important;
-    max-width: 93% !important;
-    height: 100%;
-}
-
-.materialcard > div > div:nth-of-type(5) > iframe{
-    overflow: scroll !important;
-    max-width: 93% !important;
-    height: 100%;
-} */
-
 .materialcard > div{
     border-radius: 4px !important;
     background: #fff !important;
@@ -65,4 +53,8 @@ div [data-testid="stJson"]{
     max-height: 20rem !important;
     /* overflow-x: scroll; */
     
+}
+
+.materialcardFuzzy > div{
+    background-color: red;
 }
